--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,12 @@
 [buildout]
 develop = .
-parts = test
+parts = interpreter test
 find-links = http://download.zope.org/distribution/
+
+[interpreter]
+recipe = zc.recipe.egg
+interpreter = python
+eggs = Acquisition
 
 [test]
 recipe = zc.recipe.testrunner
