Get tox + nosetests to handle doctests properly.
Set PURE_PYTHON=1 for coverage testing under tox.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist =
 
 [testenv]
 commands =
-    nosetests --doctest-tests --where={envsitepackagesdir}/Acquisition
+    nosetests --with-doctest --doctest-tests --where={envsitepackagesdir}/Acquisition
 deps =
     nose
 
@@ -19,10 +19,10 @@ setenv =
 basepython =
     python2.7
 commands =
-    nosetests --with-xunit --with-xcoverage --doctest-tests --where={envsitepackagesdir}/Acquisition --cover-package=Acquisition
+    nosetests --with-xunit --with-xcoverage --with-doctest --doctest-tests --where={envsitepackagesdir}/Acquisition --cover-package=Acquisition
 deps =
     nose
     coverage
     nosexcover
-#setenv =
-#    PURE_PYTHON = 1
+setenv =
+    PURE_PYTHON = 1
