--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ sudo: false
 python:
     - 2.6
     - 2.7
+    - 3.2
+    - 3.3
     - 3.4
     - pypy
+    - pypy3
 install:
     - python bootstrap.py
     - bin/buildout
