--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 envlist =
-#   py26,py27,py27-pure,py32,py33,py34,pypy,pypy3,coverage
-    py26,py27,coverage
+   py26,py27,py27-pure,py32,py33,py34,pypy,pypy3,coverage
 
 [testenv]
 commands =
