Test against Zope 4 KGS.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,10 @@
 [buildout]
+extends = https://raw.githubusercontent.com/zopefoundation/Zope/master/versions.cfg
 develop = .
 parts = interpreter test
+
+[versions]
+Acquisition =
 
 [interpreter]
 recipe = zc.recipe.egg
