Drop support for Python 2.6 and 3.2, claim support for Python 3.5.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-   py26,py27,py27-pure,py32,py33,py34,pypy,pypy3,coverage
+   py27,py27-pure,py33,py34,py35,pypy,pypy3,coverage
 
 [testenv]
 commands =
