Updated according to the change requests and issues found by tseaver.

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,7 @@
 [run]
 branch = True
-source = AccessControl
+source = Acquisition
 
 [report]
 precision = 2
-omit = */tests.py
+show_missing = True
