Install tox via buildout, use zope.testrunner.
Also add common flake8 exceptions.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,7 +9,9 @@ Acquisition =
 [interpreter]
 recipe = zc.recipe.egg
 interpreter = python
-eggs = Acquisition
+eggs =
+    Acquisition
+    tox
 
 [test]
 recipe = zc.recipe.testrunner
