--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,29 @@
 [tox]
 envlist =
-   py27,py27-pure,py33,py34,py35,pypy,pypy3,coverage
+   py27,py27-pure,py33,py34,py35,py35-pure,pypy,pypy3,coverage
 
 [testenv]
+install_command = pip install --no-cache-dir {opts} {packages}
 commands =
-    nosetests --with-doctest --doctest-tests --where={envsitepackagesdir}/Acquisition
+    zope-testrunner --test-path={envsitepackagesdir} -s Acquisition
 deps =
-    nose
+    zope.testrunner
 
 [testenv:py27-pure]
 basepython =
     python2.7
 setenv =
     PURE_PYTHON = 1
+    PIP_NO_CACHE = 1
+    PIP_NO_BINARY = ExtensionClass
+
+[testenv:py35-pure]
+basepython =
+    python3.5
+setenv =
+    PURE_PYTHON = 1
+    PIP_NO_CACHE = 1
+    PIP_NO_BINARY = ExtensionClass
 
 [testenv:coverage]
 basepython =
@@ -25,3 +36,5 @@ deps =
     nosexcover
 setenv =
     PURE_PYTHON = 1
+    PIP_NO_CACHE = 1
+    PIP_NO_BINARY = ExtensionClass
