Test under Python 3.6.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-   py27,py27-pure,py33,py34,py35,py35-pure,pypy,pypy3,coverage
+   py27,py27-pure,py33,py34,py35,py35-pure,py36,pypy,pypy3,coverage
 
 [testenv]
 install_command = pip install --no-cache-dir {opts} {packages}
