Make tests compatible with ExtensionClass 4.2.0.
The exception message of some AttributeErrors changed, so the
doctests were no longer happy. The missing attribute stayed the same.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-   py27,py27-pure,py33,py34,py35,py35-pure,py36,pypy,pypy3,coverage
+   py27,py27-pure,py33,py33-pure,py34,py34-pure,py35,py35-pure,py36,py36-pure,pypy,pypy3,coverage
 
 [testenv]
 install_command = pip install --no-cache-dir {opts} {packages}
@@ -8,22 +8,39 @@ commands =
     zope-testrunner --test-path={envsitepackagesdir} -s Acquisition
 deps =
     zope.testrunner
+setenv =
+    PIP_NO_CACHE = 1
+    PIP_NO_BINARY = Acquisition ExtensionClass
 
 [testenv:py27-pure]
 basepython =
     python2.7
 setenv =
     PURE_PYTHON = 1
-    PIP_NO_CACHE = 1
-    PIP_NO_BINARY = ExtensionClass
+
+[testenv:py33-pure]
+basepython =
+    python3.3
+setenv =
+    PURE_PYTHON = 1
+
+[testenv:py34-pure]
+basepython =
+    python3.4
+setenv =
+    PURE_PYTHON = 1
 
 [testenv:py35-pure]
 basepython =
     python3.5
 setenv =
     PURE_PYTHON = 1
-    PIP_NO_CACHE = 1
-    PIP_NO_BINARY = ExtensionClass
+
+[testenv:py36-pure]
+basepython =
+    python3.6
+setenv =
+    PURE_PYTHON = 1
 
 [testenv:coverage]
 basepython =
@@ -36,5 +53,3 @@ deps =
     nosexcover
 setenv =
     PURE_PYTHON = 1
-    PIP_NO_CACHE = 1
-    PIP_NO_BINARY = ExtensionClass
