Try even harder to avoid cross-pollution of tox env.

--- a/tox.ini
+++ b/tox.ini
@@ -3,14 +3,13 @@ envlist =
    py27,py27-pure,py33,py33-pure,py34,py34-pure,py35,py35-pure,py36,py36-pure,pypy,pypy3,coverage
 
 [testenv]
-install_command = pip install --no-cache-dir {opts} {packages}
+install_command = pip install --no-cache-dir --no-binary=:all: {opts} {packages}
 commands =
     zope-testrunner --test-path={envsitepackagesdir} -s Acquisition
 deps =
     zope.testrunner
 setenv =
     PIP_NO_CACHE = 1
-    PIP_NO_BINARY = Acquisition ExtensionClass
 
 [testenv:py27-pure]
 basepython =
