Stop testing under Python 3.3 and use new PyPy3 on travis-ci.
This should avoid the setuptools related build failures.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-   py27,py27-pure,py33,py33-pure,py34,py34-pure,py35,py35-pure,py36,py36-pure,pypy,pypy3,coverage
+   py27,py27-pure,py34,py34-pure,py35,py35-pure,py36,py36-pure,pypy,pypy3,coverage
 
 [testenv]
 install_command = pip install --no-cache-dir --no-binary=:all: {opts} {packages}
@@ -14,12 +14,6 @@ setenv =
 [testenv:py27-pure]
 basepython =
     python2.7
-setenv =
-    PURE_PYTHON = 1
-
-[testenv:py33-pure]
-basepython =
-    python3.3
 setenv =
     PURE_PYTHON = 1
 
