--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,11 @@ language: python
 sudo: false
 python:
     - 2.7
-    - 3.3
     - 3.4
     - 3.5
     - 3.6
     - pypy
-    - pypy3
+    - pypy3.3-5.2-alpha1
 install:
     - pip install zc.buildout
     - buildout bootstrap
