- fix six version conflict on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
     - pypy3.3-5.2-alpha1
 
 install:
+    - pip install six==1.10.0 # force to avoid conflict with zc.recipe.testrunner
     - pip install -U setuptools==33.1.1
     - pip install zc.buildout
     - buildout bootstrap
