Set explicit PyPI index to https variant, use 2.13 KGS.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,7 @@
 [buildout]
 develop = .
+extends = https://raw.githubusercontent.com/zopefoundation/Zope/2.13/version_ranges.cfg
+index = https://pypi.python.org/simple/
 parts = interpreter test
 
 [interpreter]
