--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,13 @@ python:
     - 2.6
     - 2.7
 install:
-    - python bootstrap.py
-    - bin/buildout
+    - pip install zc.buildout==2.3.1
+    - buildout
 script:
     - bin/test -v1
 notifications:
     email: false
+cache:
+  pip: true
+  directories:
+    - eggs/
