--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,9 @@ parts = interpreter test
 [interpreter]
 recipe = zc.recipe.egg
 interpreter = python
-eggs = Acquisition
+eggs =
+    Acquisition
+    tox
 
 [test]
 recipe = zc.recipe.testrunner
