- improved tox config [ci skip]

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,10 @@ envlist =
 
 [testenv]
 commands =
-    nosetests --doctest-tests --where={envsitepackagesdir}/Acquisition
+    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} bootstrap
+    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
+    {envbindir}/test -v1
+skip_install = true
 deps =
-    nose
+    setuptools==33.1.1
+    zc.buildout==2.3.1
