--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ install:
   - pip install -e .
 
 build_script:
+  - pip install -U setuptools
   - pip install wheel
   - python -W ignore setup.py -q bdist_wheel
 
