--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,8 @@ environment:
     - python: 35-x64
     - python: 36
     - python: 36-x64
+    - python: 37
+    - python: 37-x64
 
 install:
   - "SET PATH=C:\\Python%PYTHON%;c:\\Python%PYTHON%\\scripts;%PATH%"
@@ -20,6 +22,7 @@ install:
   - pip install -e .
 
 build_script:
+  - pip install -U setuptools
   - pip install wheel
   - python -W ignore setup.py -q bdist_wheel
 
