Add support for Python 3.8a3.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-   py27,py27-pure,py35,py35-pure,py36,py36-pure,py37,py37-pure,pypy,pypy3,coverage
+   py27,py27-pure,py35,py35-pure,py36,py36-pure,py37,py37-pure,py38,py38-pure,pypy,pypy3,coverage
 
 [testenv]
 install_command = pip install --no-cache-dir --no-binary=:all: {opts} {packages}
@@ -32,6 +32,12 @@ setenv =
 [testenv:py37-pure]
 basepython =
     python3.7
+setenv =
+    PURE_PYTHON = 1
+
+[testenv:py38-pure]
+basepython =
+    python3.8
 setenv =
     PURE_PYTHON = 1
 
