--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: python
-sudo: false
 python:
     - 2.7
     - 3.5
@@ -8,9 +7,17 @@ python:
     - pypy3
 matrix:
     include:
+        - name: "2.7-pure"
+          python: "2.7"
+          env: PURE_PYTHON = 1
         - python: "3.7"
           dist: xenial
-          sudo: true
+        - name: "3.7-pure"
+          python: "3.7"
+          env: PURE_PYTHON = 1
+          dist: xenial
+        - python: "3.8-dev"
+          dist: xenial
 install:
     - pip install coveralls coverage
     - pip install six==1.10.0 # force to avoid conflict with zc.recipe.testrunner
