Use `coverage_python_version` and drop using nose coverage.
Fixes #40

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,14 @@
 [run]
 branch = True
 source = Acquisition
+plugins = coverage_python_version
 
 [report]
 precision = 2
 show_missing = True
+
+[paths]
+source =
+  src/
+  .tox/*/lib/*/site-packages/
+  .tox/pypy*/site-packages/
