Use `coverage_python_version` and drop using nose coverage. (#41)
Fixes #40

--- a/tox.ini
+++ b/tox.ini
@@ -5,50 +5,60 @@ envlist =
 [testenv]
 install_command = pip install --no-cache-dir --no-binary=:all: {opts} {packages}
 commands =
-    zope-testrunner --test-path={envsitepackagesdir} -s Acquisition
+    coverage run -m zope.testrunner --test-path={envsitepackagesdir} -s Acquisition
 deps =
     zope.testrunner
+    coverage
+    coverage-python-version
 setenv =
     PIP_NO_CACHE = 1
+    COVERAGE_FILE=.coverage.{envname}
 
 [testenv:py27-pure]
 basepython =
     python2.7
 setenv =
     PURE_PYTHON = 1
+    COVERAGE_FILE=.coverage.{envname}
 
 [testenv:py35-pure]
 basepython =
     python3.5
 setenv =
     PURE_PYTHON = 1
+    COVERAGE_FILE=.coverage.{envname}
 
 [testenv:py36-pure]
 basepython =
     python3.6
 setenv =
     PURE_PYTHON = 1
+    COVERAGE_FILE=.coverage.{envname}
 
 [testenv:py37-pure]
 basepython =
     python3.7
 setenv =
     PURE_PYTHON = 1
+    COVERAGE_FILE=.coverage.{envname}
 
 [testenv:py38-pure]
 basepython =
     python3.8
 setenv =
     PURE_PYTHON = 1
+    COVERAGE_FILE=.coverage.{envname}
 
 [testenv:coverage]
-basepython =
-    python2.7
-commands =
-    nosetests --with-xunit --with-xcoverage --with-doctest --doctest-tests --where={envsitepackagesdir}/Acquisition --cover-package=Acquisition
-deps =
-    nose
-    coverage
-    nosexcover
+basepython = python3.7
 setenv =
-    PURE_PYTHON = 1
+    COVERAGE_FILE=.coverage
+skip_install = true
+commands =
+    coverage erase
+    coverage combine
+    coverage html -i
+    coverage report -i --fail-under=97.5
+deps =
+    coverage
+    coverage_python_version
