--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
     - 2.7
     - 3.5
     - 3.6
+    - 3.7
+    - 3.8
     - pypy
     - pypy3
 matrix:
@@ -10,14 +12,15 @@ matrix:
         - name: "2.7-pure"
           python: "2.7"
           env: PURE_PYTHON=1
-        - python: "3.7"
-          dist: xenial
         - name: "3.7-pure"
           python: "3.7"
           env: PURE_PYTHON=1
-          dist: xenial
-        - python: "3.8"
-          dist: xenial
+        - python: "3.9-dev"
+          # needed until https://travis-ci.com/icemac/test-travis-dev is green
+          before_install:
+            - /opt/python/3.9-dev/bin/python -m venv py39
+            - . py39/bin/activate
+
 install:
     - pip install -U coveralls coverage coverage-python-version
     - pip install -U six
