--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
     - 3.6
     - 3.7
     - 3.8
+    - 3.9-dev
     - pypy
     - pypy3
 matrix:
@@ -15,12 +16,6 @@ matrix:
         - name: "3.7-pure"
           python: "3.7"
           env: PURE_PYTHON=1
-        - python: "3.9-dev"
-          # needed until https://travis-ci.com/icemac/test-travis-dev is green
-          before_install:
-            - /opt/python/3.9-dev/bin/python -m venv py39
-            - . py39/bin/activate
-
 install:
     - pip install -U coveralls coverage coverage-python-version
     - pip install -U six
