Add support for Python 3.8 and 3.9, Drop support for Python 3.5. (#43)

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,13 @@
 [tox]
 envlist =
-   py27,py27-pure,py35,py35-pure,py36,py36-pure,py37,py37-pure,py38,py38-pure,pypy,pypy3,coverage
+   py27,py27-pure,
+   py36,py36-pure,
+   py37,py37-pure,
+   py38,py38-pure,
+   py39,py39-pure,
+   pypy,
+   pypy3,
+   coverage
 
 [testenv]
 install_command = pip install --no-cache-dir --no-binary=:all: {opts} {packages}
@@ -13,41 +20,7 @@ deps =
 setenv =
     PIP_NO_CACHE = 1
     COVERAGE_FILE=.coverage.{envname}
-
-[testenv:py27-pure]
-basepython =
-    python2.7
-setenv =
-    PURE_PYTHON = 1
-    COVERAGE_FILE=.coverage.{envname}
-
-[testenv:py35-pure]
-basepython =
-    python3.5
-setenv =
-    PURE_PYTHON = 1
-    COVERAGE_FILE=.coverage.{envname}
-
-[testenv:py36-pure]
-basepython =
-    python3.6
-setenv =
-    PURE_PYTHON = 1
-    COVERAGE_FILE=.coverage.{envname}
-
-[testenv:py37-pure]
-basepython =
-    python3.7
-setenv =
-    PURE_PYTHON = 1
-    COVERAGE_FILE=.coverage.{envname}
-
-[testenv:py38-pure]
-basepython =
-    python3.8
-setenv =
-    PURE_PYTHON = 1
-    COVERAGE_FILE=.coverage.{envname}
+    pure,coverage: PURE_PYTHON = 1
 
 [testenv:coverage]
 basepython = python3.7
