--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: python
 python:
     - 2.7
-    - 3.5
     - 3.6
+    - 3.7
+    - 3.8
+    - 3.9-dev
     - pypy
     - pypy3
 matrix:
@@ -10,14 +12,9 @@ matrix:
         - name: "2.7-pure"
           python: "2.7"
           env: PURE_PYTHON=1
-        - python: "3.7"
-          dist: xenial
-        - name: "3.7-pure"
-          python: "3.7"
+        - name: "3.8-pure"
+          python: "3.8"
           env: PURE_PYTHON=1
-          dist: xenial
-        - python: "3.8"
-          dist: xenial
 install:
     - pip install -U coveralls coverage coverage-python-version
     - pip install -U six
