--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
+# If adding or removing envs here please update the testenv:coverage-report
+# section as well:
 envlist =
-   py27,py27-pure,
    py36,py36-pure,
    py37,py37-pure,
    py38,py38-pure,
    py39,py39-pure,
-   pypy,
    pypy3,
    coverage
 
@@ -16,7 +16,6 @@ commands =
 deps =
     zope.testrunner
     coverage
-    coverage-python-version
 setenv =
     PIP_NO_CACHE = 1
     COVERAGE_FILE=.coverage.{envname}
@@ -34,4 +33,9 @@ commands =
     coverage report -i --fail-under=97.5
 deps =
     coverage
-    coverage_python_version
+depends =
+   py36,py36-pure,
+   py37,py37-pure,
+   py38,py38-pure,
+   py39,py39-pure,
+   pypy3,
