--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,9 @@ include .coveragerc
 include buildout.cfg
 include tox.ini
 
+include bootstrap.py
+exclude bootstrap.py
+
 include *.yml
 exclude *.yml
 
