--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,11 @@
+# Currently the builds use @dataflake's Appveyor account.  The PyPI token belongs
+# to zope.wheelbuilder, which is managed by @mgedmin and @dataflake.
+
 environment:
   global:
-    TWINE_USERNAME: zope.wheelbuilder
+    TWINE_USERNAME: __token__
     TWINE_PASSWORD:
-      secure: y/k8TP312tLRATkXU5dq+g==
+      secure: vSlDBj79vziJOA5k3z16r0q5r//oezNWPJuIyZKwz2GpTwY115Rq2xW/gcj9CsUVpdUYS2OPYiwlAzjTbTTjlb2Ik57qpR4Mp+Dq5ePB8Aa7cn0X6L40egBJ4QEJvm9ugg/sdOGaHVLowMhQQvEzJlsbLm6hZu26cbU2kXTVH9f3JnOFjsTWkVuRkjLvg0a0TWMXPeXekLde9s/LIFUEvG+Flcs/ifTHD8QiWVCvr1Ctqg6QBoywDC2oBe+MUtV3p519rRWShPkEzFFlYbCHPw==
 
   matrix:
     - python: 27
