try to get CI working again (Travis -> GHA)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,15 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/c-code
+[bdist_wheel]
+universal = 1
+
+[zest.releaser]
+create-wheel = no
+
 [flake8]
-ignore = C901,N801,N802,N803,N805,N806,N812,E301
+doctests = 1
+
+[check-manifest]
+ignore =
+    .editorconfig
+    .meta.toml
