--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -231,6 +231,7 @@ jobs:
         run: |
           pip install -U wheel
           pip install -U coverage coverage-python-version
+	  pip install -U zope.testrunner
           pip install -U 'faulthandler; python_version == "2.7" and platform_python_implementation == "CPython"'
           # Unzip into src/ so that testrunner can find the .so files
           # when we ask it to load tests from that directory. This
