add test dependency

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ envlist =
 [testenv]
 usedevelop = true
 deps =
+    zope.testrunner
 setenv =
     pure: PURE_PYTHON=1
     !pure-!pypy-!pypy3: PURE_PYTHON=0
