Re-add AppVeyor and update to current meta/config.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,11 @@ include *.rst
 include *.txt
 include buildout.cfg
 include tox.ini
+include appveyor.yml
 include .coveragerc
 
 recursive-include src *.py
+include *.sh
+recursive-include include *.h
+recursive-include src *.c
+recursive-include src *.h
