--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ envlist =
     py37,py37-pure
     py38,py38-pure
     py39,py39-pure
+    py310,py310-pure
     pypy
     pypy3
     coverage
@@ -44,7 +45,8 @@ basepython = python3
 skip_install = true
 deps =
     check-manifest
-    check-python-versions
+    check-python-versions >= 0.19.1
+    wheel
 commands =
     check-manifest
     check-python-versions
