Update to current meta/config.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -379,6 +379,7 @@ jobs:
 
   manylinux:
     runs-on: ubuntu-20.04
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     # We use a regular Python matrix entry to share as much code as possible.
     strategy:
       matrix:
