Configuring for c-code

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ envlist =
 usedevelop = true
 pip_pre = py313: true
 deps =
+    setuptools < 69
 setenv =
     pure: PURE_PYTHON=1
     !pure-!pypy3: PURE_PYTHON=0
@@ -54,7 +55,7 @@ deps =
 commands_pre =
 commands =
     check-manifest
-    check-python-versions
+    check-python-versions --only setup.py,tox.ini,.github/workflows/tests.yml
     python -m build --sdist --no-isolation
     twine check dist/*
 
@@ -63,8 +64,10 @@ basepython = python3
 skip_install = true
 deps =
     isort
+    flake8
 commands =
     isort --check-only --diff {toxinidir}/src {toxinidir}/setup.py
+    flake8 src setup.py
 
 [testenv:isort-apply]
 basepython = python3
