--- a/.meta.toml
+++ b/.meta.toml
@@ -2,7 +2,7 @@
 # https://github.com/zopefoundation/meta/tree/master/config/c-code
 [meta]
 template = "c-code"
-commit-id = "e45966cd"
+commit-id = "1c0f31f5"
 
 [python]
 with-windows = true
@@ -11,9 +11,10 @@ with-sphinx-doctests = false
 with-appveyor = true
 with-future-python = true
 with-macos = false
+with-docs = false
 
 [tox]
-use-flake8 = false
+use-flake8 = true
 
 [coverage]
 fail-under = 96
