--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@
 # Original comment follows.
 ###
 ###
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# This workflow will install Python dependencies, run tests with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 ###
 
@@ -81,7 +81,7 @@ jobs:
   # other people to test/debug), the strategy is to divide the process
   # into several different jobs. The first builds and saves the binary
   # wheels. It has dependent jobs that download and install the wheel
-  # to run tests, build docs, and perform linting. Building the
+  # to run tests, and build docs. Building the
   # manylinux wheels is an independent set of jobs.
   #
   # This division is time-saving for projects that take awhile to
@@ -156,12 +156,12 @@ jobs:
         if: matrix.python-version == '3.13'
         run: |
           pip install -U pip
-          pip install -U "setuptools<69" wheel twine
+          pip install -U "setuptools<74" wheel twine
       - name: Install Build Dependencies
         if: matrix.python-version != '3.13'
         run: |
           pip install -U pip
-          pip install -U "setuptools<69" wheel twine
+          pip install -U "setuptools<74" wheel twine
 
       - name: Build Acquisition (macOS x86_64)
         if: >
@@ -327,7 +327,7 @@ jobs:
       - name: Install Acquisition ${{ matrix.python-version }}
         if: matrix.python-version == '3.13'
         run: |
-          pip install -U wheel "setuptools<69"
+          pip install -U wheel "setuptools<74"
           # coverage might have a wheel on PyPI for a future python version which is
           # not ABI compatible with the current one, so build it from sdist:
           pip install -U --no-binary :all: coverage
@@ -337,18 +337,18 @@ jobs:
           unzip -n dist/Acquisition-*whl -d src
           # Use "--pre" here because dependencies with support for this future
           # Python release may only be available as pre-releases
-          pip install --pre -U -e .[test]
+          pip install --pre -e .[test]
       - name: Install Acquisition
         if: matrix.python-version != '3.13'
         run: |
-          pip install -U wheel "setuptools<69"
+          pip install -U wheel "setuptools<74"
           pip install -U coverage
           pip install -U 'cffi; platform_python_implementation == "CPython"'
           # Unzip into src/ so that testrunner can find the .so files
           # when we ask it to load tests from that directory. This
           # might also save some build time?
           unzip -n dist/Acquisition-*whl -d src
-          pip install -U -e .[test]
+          pip install -e .[test]
       - name: Run tests with C extensions
         if: ${{ !startsWith(matrix.python-version, 'pypy') }}
         run: |
@@ -379,80 +379,13 @@ jobs:
       with:
         parallel-finished: true
 
-  lint:
-    needs: build-package
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        python-version: ["3.9"]
-        os: [ubuntu-latest]
-
-    steps:
-      - name: checkout
-        uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          allow-prereleases: true
-      ###
-      # Caching.
-      # This actually *restores* a cache and schedules a cleanup action
-      # to save the cache. So it must come before the thing we want to use
-      # the cache.
-      ###
-      - name: Get pip cache dir (default)
-        id: pip-cache-default
-        if: ${{ !startsWith(runner.os, 'Windows') }}
-        run: |
-          echo "dir=$(pip cache dir)" >>$GITHUB_OUTPUT
-
-      - name: Get pip cache dir (Windows)
-        id: pip-cache-windows
-        if: ${{ startsWith(runner.os, 'Windows') }}
-        run: |
-          echo "dir=$(pip cache dir)" >> $Env:GITHUB_OUTPUT
-
-      - name: pip cache (default)
-        uses: actions/cache@v4
-        if: ${{ !startsWith(runner.os, 'Windows') }}
-        with:
-          path: ${{ steps.pip-cache-default.outputs.dir }}
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: pip cache (Windows)
-        uses: actions/cache@v4
-        if: ${{ startsWith(runner.os, 'Windows') }}
-        with:
-          path: ${{ steps.pip-cache-windows.outputs.dir }}
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Download Acquisition wheel
-        uses: actions/download-artifact@v4
-        with:
-          name: Acquisition-${{ runner.os }}-${{ matrix.python-version }}.whl
-          path: dist/
-      - name: Install Acquisition
-        run: |
-          pip install -U pip
-          pip install -U wheel
-          pip install -U `ls dist/Acquisition-*`[test]
-      - name: Lint
-        run: |
-          pip install -U tox
-          tox -e lint
-
   manylinux:
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     # We use a regular Python matrix entry to share as much code as possible.
     strategy:
       matrix:
-        python-version: ["3.9"]
+        python-version: ["3.11"]
         image: [manylinux2014_x86_64, manylinux2014_i686, manylinux2014_aarch64]
 
     steps:
@@ -533,6 +466,8 @@ jobs:
           name: manylinux_${{ matrix.image }}_wheels.zip
       - name: Restore pip cache permissions
         run: sudo chown -R $(whoami) ${{ steps.pip-cache-default.outputs.dir }}
+      - name: Prevent publishing wheels for unreleased Python versions
+        run: VER=$(echo '3.13' | tr -d .) && ls -al wheelhouse && sudo rm -f wheelhouse/*-cp${VER}*.whl && ls -al wheelhouse
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         if: >
