--- a/tox.ini
+++ b/tox.ini
@@ -14,10 +14,9 @@ envlist =
     coverage
 
 [testenv]
-usedevelop = true
 pip_pre = py313: true
 deps =
-    setuptools < 69
+    setuptools < 74
 setenv =
     pure: PURE_PYTHON=1
     !pure-!pypy3: PURE_PYTHON=0
@@ -41,6 +40,7 @@ commands =
     coverage run -m zope.testrunner --test-path=src {posargs:-vc}
     coverage html -i
     coverage report -i -m --fail-under=96
+
 [testenv:release-check]
 description = ensure that the distribution is ready to release
 basepython = python3
@@ -59,20 +59,11 @@ commands =
     twine check dist/*
 
 [testenv:lint]
+description = This env runs all linters configured in .pre-commit-config.yaml
 basepython = python3
 skip_install = true
 deps =
-    isort
-    flake8
-commands =
-    isort --check-only --diff {toxinidir}/src {toxinidir}/setup.py
-    flake8 src setup.py
-
-[testenv:isort-apply]
-basepython = python3
-skip_install = true
+    pre-commit
 commands_pre =
-deps =
-    isort
 commands =
-    isort {toxinidir}/src {toxinidir}/setup.py []
+    pre-commit run --all-files --show-diff-on-failure
