--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,9 @@
 # https://github.com/zopefoundation/meta/tree/master/config/c-code
 
 [build-system]
-requires = ["setuptools<74"]
+requires = ["setuptools <= 75.6.0"]
 build-backend = "setuptools.build_meta"
 
-[tool.coverage]
 [tool.coverage.run]
 branch = true
 source = ["Acquisition"]
