- don't test future python, it seems to crash the interpreter

--- a/.meta.toml
+++ b/.meta.toml
@@ -8,7 +8,7 @@ commit-id = "9fcd3d67"
 with-windows = true
 with-pypy = true
 with-sphinx-doctests = false
-with-future-python = true
+with-future-python = false
 with-macos = false
 with-docs = false
 
