--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "Acquisition"
-version = "6.2"
+version = "6.3.dev0"
 description = "Acquisition is a mechanism that allows objects to obtain attributes from the containment hierarchy they're in."
 readme = "README.rst"
 requires-python = ">=3.10"
